update study notes

--- a/设计模式/设计模式学习笔记2-单例模式.md
+++ b/设计模式/设计模式学习笔记2-单例模式.md
@@ -1,6 +1,6 @@
 # 1 单例模式
 
-# 1.1 懒汉式（线程不安全）
+## 1.1 懒汉式（线程不安全）
 
 ```java
 public class Singleton {
@@ -84,15 +84,15 @@ public class Singleton {
 
 ```java
 public class Singleton {
-    private satic class SingletonHolder {
+    private static class SingletonHolder {
         private static final Singleton INSTANCE = new Singleton();
+    }
+    
+    private Singleton() {
+    }
         
-        private Singleton() {
-        }
-        
-        public static final Singleton getInstance() {
-            return SingletonHolder.INSTANCE;
-        }
+    public static final Singleton getInstance() {
+        return SingletonHolder.INSTANCE;
     }
 }
 ```
@@ -101,15 +101,52 @@ public class Singleton {
 
 ## 1.6 枚举方式
 
+```java
+enum Singleton{
+    INSTANCE;
+    
+    public void otherMethods(){
+        System.out.println("Something");
+    }
+}
+```
 
+优点：**自由序列化，线程安全，保证单例**；
 
+使用方法：直接Singleton.INSTANCE;即得到一个实例。
 
+enum是通过继承了Enum类实现的，enum结构不能够作为子类继承其他类，但是可以用来实现接口。
 
+**enum有且仅有private的构造器，防止外部的额外构造，这恰好和单例模式吻合，也为保证单例性做了一个铺垫。**这里展开说下这个private构造器，如果我们不去手写构造器，则会有一个默认的空参构造器，我们也可以通过给枚举变量参量来实现类的初始化。
 
+对于序列化和反序列化，因为每一个枚举类型和枚举变量在JVM中都是唯一的，即Java在序列化和反序列化枚举时做了特殊的规定，枚举的writeObject、readObject、readObjectNoData、writeReplace和readResolve等方法是被编译器禁用的，因此也不存在实现序列化接口后调用readObject会破坏单例的问题。
 
+**在序列化中会通过反射调用无参构造函数创建一个新的对象。**
 
+##外加：双重检测的变形（防止序列化破坏单例模式）
 
+```java
+public class Singleton {
+    private volatile static Singleton instance;
+    
+    private Singleton() {
+    }
+    
+    public static Singleton getInstance() {
+        if(instance == null) {
+            synchronized(Singleton.class) {
+                if(instance == null) {
+                    instance = new Singleton();
+                }
+            }
+        }
+    }
+    
+    private Object readResolve() {
+        return instance;
+    }
+}
+```
 
-
-
+这个在Singleton中**添加了一个readResovle();在该方法中指定要返回的对象的生成策略**，就可以防止单例被破坏。
 
