--- a/设计模式/设计模式学习笔记2-单例模式.md
+++ b/设计模式/设计模式学习笔记2-单例模式.md
@@ -74,11 +74,14 @@ public class Singleton {
                 }
             }
         }
+        return instance;
     }
 }
 ```
 
 双重检验是利用两次校验对instance进行判断instance是否被实例化，如果没有别实例化则进行同步操作，在同步操作里面再进行判断（防止第一次判断时有几个线程同时进入），如果没有实例化则进行实例化，这样的好处就是可以大大减少同步的用时，大大节省时间。
+
+在这里我么你对类变量instance采用了volatile关键字进行修饰，那么这个关键字到底起到了什么作用呢？首先我们要了解volatile关键字的作用，volatile关键字主要是为了保证可见性以及防止**指令重排序**，在这里volatile主要的作用就是防止指令重排序，即当两个线程A、B同时调用getInstance()方法时，A先进行判断发现instance==nullj进入同步，把**对象锁关闭**这时B再进来是就在等待了，A在进行new操作的时候，类初始化一般情况是先进行声明（在单例类中已经申明了），其次是进行内存的分配，之后是对象的初始化，最后返回类的句柄，但这是一般情况，但有指令重排序的作用，可能会先返回类的句柄，但是类还没有进行初始化，返回句柄后，B进入同步块发现instance已经被实例化了（实际上还没有初始化，只是返回了句柄），这时B直接返回实例instance（未初始化的对象），这时就出为问题了，所以我们添加了volatile关键字来修饰instance保证指令不会重排序，这时B也就不会返回一个没有被初始化的句柄了。
 
 ## 1.5 静态内部类方式
 
@@ -140,6 +143,7 @@ public class Singleton {
                 }
             }
         }
+        return instance;
     }
     
     private Object readResolve() {
