--- a/面试相关/面试经验.md
+++ b/面试相关/面试经验.md
@@ -1,7 +1,7 @@
 #1 第一次面试：（海康威视面试）
 
-    时间：2018-09-16 
-    地点：沙坪坝，师范大学附近
+时间：2018-09-16 
+地点：沙坪坝，师范大学附近
 
 ## 前言
 
@@ -15,7 +15,7 @@
 
 自我介绍过后，这时面试官就问在这实验室中主要干了什么（说实话我觉得这个内容应该放在自己的自我介绍中，顺便介绍实验室生活，这些都是会被问到的，问什么自己不直接一口气讲出来呢，反而让自己陷入被动中呢），我觉的面试官的这个问题不仅想了解我的项目上的问题，而且想通过这个问题来了解我到底是什么样的人，在现实生活中是怎样学习的（毕竟我学习都是通过实验室这个平台）（新知识、团队合作的体现）。回答这个问题我主要以我的角度陈述了我做了些什么，在最后我对面试官的提问中，他给我说，从他听到的我说的，他觉得项目是一个团队性质的合作，我对项目的陈述一直围绕着自己，而没有体现到团体合作，也没有提这个项目到底是要干什么的（介绍项目前要先整体介绍这个项目是干什么的，我做的功能在这个项目中起到了什么样的作用，体现自己工作的重要性！！！），虽然写的是自己是核心开发人员，但是没有体现自己在这个项目中的重要性，现在想想我陈述项目都太死板了，没有举一反三。
 
-**阶段总结**：现在想来在面试中介绍自己在实验室中的生活，应该先从现实生活出发（比如参加了一系列的比赛，怎样和同学进行相处的，可以提到实验室举办的各种活动，也可以提到相应的知识是怎么分享的（体现团队交流能力）），整体介绍过后，我觉得面试官应该有了一个大概的印象，之后就应该介绍项目，在介绍一个项目之前应该首先对整个项目进行概括（这个项目是干什么的，有什么用处），之后就是介绍自己参与的模块（在这里需要说说自己开发的模块对整个项目的重要性），想想自己在项目上是怎样与他人合作的，当然也应该准备一个自己在项目上的难题（如果想不出可以借鉴一下他人的经验），自己参与最久的项目、干活最多的项目应该多花点口水，相对较少的就少说一点。
+**阶段总结**：现在想来在面试中介绍自己在实验室中的生活，应该先从现实生活出发（比如参加了一系列的比赛，怎样和同学进行相处的，可以提到实验室举办的各种活动，也可以提到相应的知识是怎么分享的（体现团队交流能力）），整体介绍过后，我觉得面试官应该有了一个大概的印象，之后就应该介绍项目，在介绍一个项目之前应该首先对整个项目进行概括（这个项目是干什么的，有什么用处），之后就是介绍自己参与的模块（在这里需要说说自己开发的模块对整个项目的重要性），想想自己在项目上是怎样与他人合作的，当然也应该准备一个自己在项目上的难题（如果想不出可以借鉴一下他人的经验），自己参与最久的项目、干活最多的项目应该多花点口水，相对较少的就少说一点。还有就是项目要想一个解决的难题，一定要了解其中的内部原理，可以讲出来，难在哪，怎么解决问题的。
 
 ##1.3 简历知识扩展阶段
 
@@ -28,19 +28,25 @@
 
 由于在上面提到了面向接口编程，这时候面试官就给我提问了一个问题，在接口里是否可以定义private方法，模棱两可的回答，没有回答好，这点原来自己看过的竟然又忘了，知识记得不够牢靠（平常该多复习自己以前看过的东西呀！！！）。
 
-##1.5综合考察阶段
+##1.5 综合考察阶段
 
-这个阶段点的问题比较开放，同时也是对人的最终了解，说好了会留一个好印象，反之相反。首先面试官来问我学习新知识的途径以及方式（互联网技术更新快，现在有一些新技术，你是怎么学习的？），在这个部分应该体现自己学习的层次性。面试过后我觉得应该这样总结，首先体现从什么途径得知相关的技术（技术博客、与他人交流），对工作是否可以有帮助（毕竟是要应用到实际的），其次要了解这个技术是干什么的（为什么会有这个技术产生，相比原先的技术这个的好处好处是什么，相对应这个新技术是否会被采用，即稳定性方面是否可靠），之后说一般的学习过程，互联网技术一般从helloword开始，通过看官方文档一般是英文文档，写一个小的demo了解这个技术到到底该怎么用。最终就是
+这个阶段点的问题比较开放，同时也是对人的最终了解，说好了会留一个好印象，反之相反。首先面试官来问我学习新知识的途径以及方式（互联网技术更新快，现在有一些新技术，你是怎么学习的？），在这个部分应该体现自己学习的层次性。面试过后我觉得应该这样总结，首先体现从什么途径得知相关的技术（技术博客、与他人交流），对工作是否可以有帮助（毕竟是要应用到实际的），其次要了解这个技术是干什么的（为什么会有这个技术产生，相比原先的技术这个的好处好处是什么，相对应这个新技术是否会被采用，即稳定性方面是否可靠），之后说一般的学习过程，互联网技术一般从helloword开始，通过看官方文档或者通过搜索引擎，写一个小的demo了解这个技术到到底该怎么用（在这期间可以写一些博客，总结自己在这方面遇到的问题，当然这个整理的过程也为以后的复习提供强大的助力）。最终就是应用，看看在哪些地方可以应用这项技术，毕竟学了不用那么这个东西就会遗忘。
+
+在这个阶段面试官还问了我一个问题就是：万事都谈一个‘最’字，那么你最大的缺点是什么？现场懵逼，瞎说了一通，现在后悔死了，想想还是要好好总结一番。
+
+## 1.6 反问阶段
+
+这个阶段是问面试官问题，我觉的应该至少问两个问题，第一：你们是怎么样进行知识储备的？第二：你对我怎么看？
 
 ##其它备注
 
-整体问题：
+**问我的问题**：
     Spring ioc理解，怎样使用的
     Spring aop理解，引出面向接口编程，引出代理模式
     面试中总结自己的最大缺点（变相说自己的好话）
     学习新技术的方法和途径
-同一个面试官问其他人的问题：
-    接口中是否可以private方法 jdk1.7和1.8区别
+**问其他人的问题**：
+    接口中是否可以有private方法 ，jdk1.7和1.8private的区别
     什么类不能被继承
     final关键字的用法及作用
 
