--- a/算法/算法题/从排序数组中删除重复项.md
+++ b/算法/算法题/从排序数组中删除重复项.md
@@ -59,7 +59,7 @@ for (int i = 0; i < len; i++) {
 
 其余情况定义个变量一个变量i，一个变量j，i用来记录不重复的数的下标，j用来遍历数组，如果array[i] != array[j]则把array[i+1] = array[j];赋值并把i的计数+1；不相等就把j+1,遍历结束后最终输出i+1代表不重复的个数。
 
-![从排序数组中删除重复项](/../../学习笔记/picture/从排序数组中删除重复项.jpg)
+![从排序数组中删除重复项](/从排序数组中删除重复项.jpg)
 
 ```java
 class Solution {
