--- a/算法/数组排序.md
+++ b/算法/数组排序.md
@@ -21,10 +21,9 @@ typora-root-url: ..\picture
         for(int i=0; i<array.length; i++) {
             for(int j=i+1; j<array.length; j++) {
                 if(array[i] > array[j]) {
-                    // 利用异或操作交换两个数字（好处：不引入新的变量，没有溢出问题产生）
-                    array[i] = array[i] ^ array[j];
-                    array[j] = array[i] ^ array[j];
-                    array[i] = array[i] ^ array[j];
+                    int temp = array[i];
+                    array[i] = array[j];
+                    array[j] = temp;
                 }
             }
         }
@@ -37,6 +36,8 @@ typora-root-url: ..\picture
 算法思路：依次比较相邻的两个数，如果按照判断条件则进行相应的交换两个数字的操作。因为每次都是把一个数放到最前或最后，很像泡泡从水底冒出的样子，故命名为冒泡算法。
 
 如果两个相等的元素没有相邻，那么即使通过前面的两两交换把两个元素相邻起来，最终也不会交换它俩的位置，所以相同元素经过排序后顺序并没有改变。所以冒泡排序是一种稳定排序算法。 
+
+
 
 ## 1.2 选择排序
 
