--- a/Java/抽象类和接口.md
+++ b/Java/抽象类和接口.md
@@ -34,9 +34,65 @@ abstract void fun();
 - 抽象类不能用来创建对象。
 - 如果一个类继承抽象类，那么必须实现抽象类的抽象方法。如果子类没有实现父类的抽象方法，则必须也将子类定义为abstract。
 
+
+
 ## 1.2 接口
+
+###1.2.1 接口定义
+
+接口是对行为的抽象。
+
+接口的定义：
+
+```java
+[public] interface InterfaceName {
+ 
+}
+```
+
+接口的实现：
+
+```java
+class ClassName implements Interface1,Interface2,[....]{
+}
+```
+
+### 1.2.2 注意
+
+- 接口中的**变量**会被隐式声明为<font color="red">public static final</font>，为private或protected会编译出错。
+- 接口中的**方法**会被隐式声明为<font color="red">public abstract</font>，（用其他关键字如：private、protect、static、final会报编译错误）
+
+### 1.2.3 JDK8中的接口
+
+<font color="blue">在JDK8中可以在接口中定义默认的方法、以及静态方法的实现。</font>
+
+default方法使用**default**关键字修饰，它是对象方法，需要使用对象来进行访问。
+
+举例（**java.lang.Iterable**接口）：
+
+```java
+default void forEach(Consumer<? super T> action) {
+    Objects.requireNonNull(action);
+    for (T t : this) {
+        action.accept(t);
+    }
+}
+```
+
+### 1.2.4 JDK8接口注意事项
+
+- 非default方法、static方法不能有实现，否则会编译出错：Abstract methods do not specify a body
+- default方法、static方法必须实现，否则会编译出错：This method requires a body instead of a semicolon
+- 可以拥有多个default方法
+- 可以拥有多个static方法
+- 使用接口中类型时，仅仅需要实现抽象方法，default、static方法不需要强制自己新实现
+
+
 
 ## 1.3 抽象类和接口的区别
 
-
+- **方法层面**：抽象类可以提供成员方法的实现细节，而接口中只能存在public abstract 方法、default方法和static方法；
+- **成员变量层面**：抽象类中的**成员变量**可以是各种类型的，而接口中的成员变量只能是public static final类型的；
+- **静态代码块**：接口中不能含有静态代码块，而抽象类可以有静态代码块；
+- **单继承&多实现**：一个类只能继承一个抽象类，而一个类却可以实现多个接口。
 
