--- a/Java/抽象类和接口.md
+++ b/Java/抽象类和接口.md
@@ -95,4 +95,5 @@ default void forEach(Consumer<? super T> action) {
 - **成员变量层面**：抽象类中的**成员变量**可以是各种类型的，而接口中的成员变量只能是public static final类型的；
 - **静态代码块**：接口中不能含有静态代码块，而抽象类可以有静态代码块；
 - **单继承&多实现**：一个类只能继承一个抽象类，而一个类却可以实现多个接口。
+- 抽象类是对一种事物的抽象，即对类抽象，而接口是对行为的抽象。
 
