--- a/数据库/数据库学习-范式.md
+++ b/数据库/数据库学习-范式.md
@@ -149,7 +149,25 @@ typora-root-url: ..\picture
 
 ## 1.6 巴斯-科德范式（BCNF）
 
+BCNF与[第三范式](https://zh.wikipedia.org/wiki/%E7%AC%AC%E4%B8%89%E8%8C%83%E5%BC%8F)的不同之处在于：第三范式中不允许[非主属性](https://zh.wikipedia.org/w/index.php?title=%E9%9D%9E%E4%B8%BB%E5%B1%9E%E6%80%A7&action=edit&redlink=1)被另一个非主属性决定，但第三范式允许主属性被非主属性决定；而在BCNF中，任何属性（包括非主属性和主属性）都不能被非主属性所决定。
 
+任何一个BCNF必然满足：
+
+- 所有非主属性都完全函数依赖于每个候选键
+- 所有主属性都完全函数依赖于每个不包含它的候选键
+- 没有任何属性完全函数依赖于非候选键的任何一组属性
+
+
+
+**总结**：
+
+**BCNF：满足3NF，还满足主属性不依赖主属性（两个主属性不相互依赖）**
+
+<font color="red">第三范式只判断非主属性是否部分依赖和传递依赖主属性。</font>
+
+<font color="red">BCNF既判断非主属性，又判断主属性是否有部分依赖和传递依赖。</font>
+
+若一个关系达到了第三范式，并且它只有一个候选码，或者它的每个候选码都是单属性(非多个属性组合而成的候选码)，则该关系自然达到BCNF。
 
 
 
