--- a/设计模式/设计模式学习笔记3-代理模式.md
+++ b/设计模式/设计模式学习笔记3-代理模式.md
@@ -10,7 +10,7 @@ typora-root-url: ..\picture
 
 **代理模式uml**
 
-![代理模式](代理模式.png)
+![代理模式](https://github.com/RunningHong/LearnNotes/blob/master/picture/%E4%BB%A3%E7%90%86%E6%A8%A1%E5%BC%8F.png?raw=true)
 
 ## 1.1 静态代理的实现
 
