--- a/Java/抽象类和接口.md
+++ b/Java/抽象类和接口.md
@@ -2,7 +2,7 @@
 
 ## 1.1 抽象类
 
-##1.1.1 抽象方法
+### 1.1.1 抽象方法
 
 首先说到抽象类那么我们来说说抽象方法，抽象方法是一种特殊的方法，它只有声明，没有具体的实现：
 
@@ -16,7 +16,7 @@ abstract void fun();
 
 抽象类中也可以不声明一个抽象方法。
 
-###1.1.2 定义一个抽象类
+### 1.1.2 定义一个抽象类
 
 ```java
 [public] abstract class ClassName {
@@ -38,7 +38,7 @@ abstract void fun();
 
 ## 1.2 接口
 
-###1.2.1 接口定义
+### 1.2.1 接口定义
 
 接口是对行为的抽象。
 
