--- a/算法/拓扑排序.md
+++ b/算法/拓扑排序.md
@@ -1,7 +1,3 @@
----
-typora-root-url: ..\picture
----
-
 # 1 拓扑排序
 
 ## 1.1 什么是拓扑排序
@@ -19,9 +15,9 @@ typora-root-url: ..\picture
 
 ![拓扑排序分步](https://github.com/RunningHong/LearnNotes/blob/master/picture/%E6%8B%93%E6%89%91%E6%8E%92%E5%BA%8F%E5%88%86%E6%AD%A5.png?raw=true)
 
-排序序列：1 ，2， 4， 3， 5；
+排序序列：1 ，2， 4， 3， 5
 
-###排序规则
+### 排序规则
 
 <font color="blue">每次循环都是找到**入度为0**的点，对这个点进行输出，并把这个点关联的边去掉。</font>
 
