--- a/操作系统/银行家算法.md
+++ b/操作系统/银行家算法.md
@@ -33,6 +33,12 @@
 
 
 
+## 1.3 银行家算法实例
+
+假定系统中有五个进程{P0，P1，P2，P3，P4}和三类资源{A，B，C}，各种资源的数量分别为10、5、7，在T0时刻的资源分配情况如图示。 （先忽略P1第二行的括号）
+
+![](https://github.com/RunningHong/LearnNotes/blob/master/picture/%E9%93%B6%E8%A1%8C%E5%AE%B6%E7%AE%97%E6%B3%95%E5%AE%9E%E4%BE%8B.png?raw=true)
+
 
 
 
