--- a/操作系统/银行家算法.md
+++ b/操作系统/银行家算法.md
@@ -41,7 +41,15 @@
 
 <font color="blue">描述</font>：有若干城池（P0 --- P4）,大将军有可利用的每个兵种的人数**Available**（3,3,2），就拿P0来说，P0解决战斗每个兵种的需要的总人数**Max**（7,5,3），在城池中每个兵种已经有的人数**Allocation**（0,1,0），P0完成这场斗争需要的兵的数量**Need**（7,4,3）【Need[i]=Max[i]-Allocation[i]】
 
-<font color="blue">解决步骤</font>：首先大将军比较P0发现直接的兵**Available**（3,3,2），不能满足P0的需求**Need**（7,4,3），于是走到下一个城池P0,发现可以打赢这场战争，于是战斗解放了城池，因此部队也得到了增强到**Available**（5,3,2），依次类推寻找可以战胜战争的城池，获得最终的胜利
+<font color="blue">解决步骤</font>：首先大将军比较P0发现直接的兵**Available**（3,3,2），不能满足P0的需求**Need**（7,4,3），于是走到下一个城池P0,发现可以打赢这场战争，于是战斗解放了城池，因此部队也得到了增强到**Available**（5,3,2），依次类推寻找可以战胜战争的城池，获得最终的胜利。
+
+![](https://github.com/RunningHong/LearnNotes/blob/master/picture/%E9%93%B6%E8%A1%8C%E5%AE%B6%E7%AE%97%E6%B3%95%E8%A7%A3%E5%86%B3%E6%AD%A5%E9%AA%A4.png?raw=true)
+
+战斗顺序：p1 -> P3 ->P4 -> P2 -> P0
+
+
+
+**计算方法**：循环线程P<sub>i</sub>，每次把Available跟P<sub>i</sub>的Need比较，如果发现Available中每个元素都大于Need的每个元素，则进行资源分配，进程工作完后把Available=（Available+Allocation），依次循环找到线程分配序列。
 
 
 
