--- a/数据库/数据库学习-事务.md
+++ b/数据库/数据库学习-事务.md
@@ -2,7 +2,7 @@
 
 ## 1.1 什么是事务
 
-事务可以理解为一个 **独立的工作单元**, 在这个独立的工作单元中, 有**一组操作**，放在事务(独立工作单元)中的多个操作, **要么全部执行成功, 要么全部执行失败**。
+事务可以理解为一个**独立的工作单元**, 在这个独立的工作单元中, 有**一组操作**，放在事务(独立工作单元)中的多个操作, **要么全部执行成功, 要么全部执行失败**。
 
 事务指的是满足 ACID 特性的一组操作，可以通过 Commit 提交一个事务，也可以使用 Rollback 进行回滚。
 
@@ -223,7 +223,7 @@ ep:
 
 多版本并发控制（Multi-Version Concurrency Control, MVCC）是 MySQL 的 InnoDB 存储引擎实现隔离级别的一种具体方式，用于**实现提交读和可重复读**这两种隔离级别。而未提交读隔离级别总是读取最新的数据行，无需使用 MVCC。可串行化隔离级别需要对所有读取的行都加锁，单纯使用 MVCC 无法实现。
 
-<font color="red">可以解决未读提交和可重复读，不能解决幻读。</font>
+<font color="red"> MVCC用于实现未读提交和可重复读这两个隔离级别，不能解决幻读。</font>
 
 ### 1.7.1 版本号
 
@@ -275,9 +275,43 @@ SELECT c FROM t WHERE c BETWEEN 10 and 20 FOR UPDATE;
 (20, positive infinity)
 ```
 
+
+
+------
+
 # 2 用自己的话总结事务
 
+事务就是指满足ACID的特性的**一组操作**，要么全部做，要么全部不做。
 
+说到事务那么就要说说事务的**四大特性**即：原子性（Atomicity）、一致性（Consistency）、隔离性（Isolation）和持久性（Durability）。
+
+- **原子性**：事务要么全部做要么全部不做
+- **一致性**：事务在执行前后都保持一致性状态
+- **隔离性**：事务在修改之前对其他事务是不可见的
+- **持久性**：事务一旦提交那么修改就会永久保存到数据库中。
+
+
+
+封锁类型主要分为读写锁和意向锁。
+
+- 读写锁
+  - 读锁（S锁）：加了读锁只可以进行读操作，读锁上可以继续加读锁
+  - 写锁（X锁）：加了写锁可以进行读取、修改操作，写锁上不能添加其他的锁（包括写锁）
+- 意向锁：使用意向锁（Intention Locks）可以更容易地支持多粒度封锁。
+  意向锁都是表锁，意向锁就像一个房管，不管用户是要使用整间房（整个表），还是使用房间的一部分（某行），其他用户等级要使用这个房间是都会先去房管那查询，这个房价是否被占用（是否加了意向锁），如果房间被占用了，房管就不会把这间房立即分给房客，而是等到原来的房客用完房间为止。
+
+
+
+说到事务那么另外一个东西也要说说，那就是**事务的隔离**级别，在数据库中总共有四种隔离级别从低到高为：未提交度、提交度、可重复读、序列化。
+
+- **未提交读**：事务在未提交的时候对其他事务也是**可见**的（其他事务也是可以访问这个数据的）。
+- **提交读**：一个事务的修改在未提交前对其他事务是不可见的。
+- **可重复读**：保证在同一个事务中多次读取的结果是一样的。
+- **序列化**：事务只能一个接着一个地执行，但不能并发执行。
+
+在Mysql中的隔离级别默认是使用的**可重复读**。
+
+多版本并发控制（ MVCC）是 MySQL 的 InnoDB 存储引擎实现隔离级别的一种具体方式，应用于**实现提交读和可重复读**这两种隔离级别，但是MVCC不能解决幻读的问题，MVCC+Next-Key Locks可以解决幻读问题。
 
 
 
