--- a/算法/数组排序.md
+++ b/算法/数组排序.md
@@ -108,6 +108,8 @@
 
 ### 1.3.1 直接插入排序
 
+直接插入版本一：
+
 ```java
 	/**
 	 * 插入排序(从小到大)
@@ -134,21 +136,105 @@
 	}
 ```
 
+直接插入版本2：
+
+```java
+	/**
+	 * 插入排序(从小到大)版本2
+	 * 把当前下标的值和当前值前面的值一一比较，如果当前值小于前面的值则进行交换，直到前面一个值大于比较值，
+	 * 循环以上步骤，使数组全部有序
+	 * @param a
+	 * @return
+	 */
+	public int[] insertSort2(int[] a) {
+		
+		for(int i=0; i<a.length; i++) {
+			for(int j=i-1;j>=0;j--) {
+				if(a[j] > a[j+1]) {
+					int temp = a[j];
+					a[j] = a[j+1];
+					a[j+1] = temp;
+				}
+				System.out.println(Arrays.toString(a));
+			}
+		}
+		
+		return a;
+	}
+```
+
 ![img](https://github.com/RunningHong/LearnNotes/blob/master/picture/selectionSort.png?raw=true)
 
 ### 1.3.2 希尔排序
 
 ```java
-
+	/**
+	 * 希尔排序(从小到大)
+	 * 先将整个待排元素序列分割成若干个子序列（由相隔某个“增量”的元素组成的）分别进行直接插入排序，
+	 * 然后依次缩减增量再进行排序，待整个序列中的元素基本有序（增量足够小）时，再对全体元素
+	 * 进行一次直接插入排序。因为直接插入排序在元素基本有序的情况下（接近最好情况），效率是很高的，
+	 * 因此希尔排序在时间效率上比前两种方法有较大提高。
+	 * @param array
+	 * @return
+	 */
+	public int[] shellSort(int[] array) {
+		
+		int arrayLength = array.length;
+		
+		for(int gap = arrayLength/2; gap>0; gap/=2) { // 元素间隔的长度初始为(数组长度/2),每次循环间隔减少一倍，直到gap为0
+			
+			for(int i=0; i<gap; i++) { // 对相隔gap个增量的元素进行直接插入排序
+				
+				for(int j=i+gap; j<arrayLength; j++) {
+					
+					if(array[j] < array[j-gap]) {
+						int temp = array[j];
+						int k = j-gap;
+						while(k>=0 && array[k]>temp) {
+							array[k+gap] = array[k];
+							k-=gap;
+						}
+						
+						array[k+gap] = temp;
+					}
+					
+				}
+				
+			}
+		}
+		
+		return array;
+	}
 ```
 
+以n=10的一个数组<font color="red">49, 38, 65, 97, 26, 13, 27, 49, 55, 4</font>为例
+第一次 gap = 10 / 2 = 5
+<font color="red">49    38    65    97    26    13    27    49    55    4</font>
+1A                                     1B
+        2A                                     2B
+                 3A                                     3B
+                         4A                                     4B
+                                  5A                                     5B
+1A,1B，2A,2B等为分组标记，数字相同的表示在同一组，大写字母表示是该组的第几个元素， 每次对同一组的数据进行直接插入排序。即分成了五组(49, 13) (38, 27) (65, 49)  (97, 55)  (26, 4)这样每组排序后就变成了(13, 49)  (27, 38)  (49, 65)  (55, 97)  (4, 26)，下同。
+第二次 gap = 5 / 2 = 2
+排序后
+<font color="red">13    27    49    55    4     49     38    65    97    26</font>
+1A            1B            1C            1D            1E
+        2A             2B           2C             2D            2E
+第三次 gap = 2 / 2 = 1
+<font color="red">4     26    13     27      38    49    49    55    97    65</font>
+1A   1B   1C     1D     1E     1F   1G   1H    1I      1J
+第四次 gap = 1 / 2 = 0 排序完成得到数组：
+
+<font color="red">4    13     26     27      38    49    49    55    65    97</font>
+
+## 1.4 归并排序
+
+归并方法将数组中两个已经排序的部分归并成一个。
 
 
 
-
-
-
-	
+​	
 
 
 
