--- a/数据库/数据库学习-索引.md
+++ b/数据库/数据库学习-索引.md
@@ -1,2 +1,67 @@
+[TOC]
+
 # 1 索引
+
+## 1.1 什么是索引
+
+索引（Index）是帮助MySQL高效获取数据的数据结构。
+
+一般来说，索引本身也很大，不可能全部存储在内存中，因此索引往往以索引文件的形式存储的磁盘上。这样的话，索引查找过程中就要产生磁盘I/O消耗，相对于内存存取，I/O存取的消耗要高几个数量级，所以评价一个数据结构作为索引的优劣最重要的指标就是在查找过程中磁盘I/O操作次数的渐进复杂度。换句话说，索引的结构组织要尽量减少查找过程中磁盘I/O的存取次数。
+
+## 1.2 索引的类型
+
+- **聚集索引**：表数据按照索引的顺序来存储。对于聚集索引，叶子节点存储了真实的数据行，不再有单独的数据页。
+- **非聚集索引**：表数据存储顺序和索引顺序无关。对于非聚集索引，叶子节点包含索引字段值及指向数据页数据行的逻辑指针，该层紧邻数据页，其行数量与数据库行数量一致。
+
+**非聚集索引与聚集索引相比**：
+
+A）叶子结点并非数据结点
+B）叶子结点为每一真正的数据行存储一个“键-指针”对
+C）叶子结点中还存储了一个指针偏移量，根据页指针及指针偏移量可以定位到具体的数据行。
+D）类似的，在除叶结点外的其它索引结点，存储的也是类似的内容，只不过它是指向下一级的索引页的。
+
+## 1.3 MyISAM索引实现
+
+MyISAM引擎使用B+Tree作为索引结构，叶节点的data域存放的是数据记录的地址。下图是MyISAM索引的原理图：
+
+![这里写图片描述](https://img-blog.csdn.net/20160926141231996)
+
+这里设表一共有三列，假设我们以Col1为主键，则上图是一个MyISAM表的主索引（Primary key）示意。可以看出MyISAM的索引文件仅仅保存数据记录的地址。在MyISAM中，**主索引和辅助索引（Secondary key）在结构上没有任何区别，只是主索引要求key是唯一的，而辅助索引的key可以重复**。如果我们在Col2上建立一个辅助索引，则此索引的结构如下图所示： 
+
+![](https://img-blog.csdn.net/20160926141811354)
+
+同样也是一颗B+Tree，data域保存数据记录的地址。因此，MyISAM中索引检索的算法为首先按照B+Tree搜索算法搜索索引，如果指定的Key存在，则取出其data域的值，然后以data域的值为地址，读取相应数据记录。 
+**MyISAM的索引方式也叫做“非聚集”的**，之所以这么称呼是为了与InnoDB的聚集索引区分。
+
+## 1.4 InnoDB索引实现
+
+虽然InnoDB也使用B+Tree作为索引结构，但具体实现方式却与MyISAM截然不同。
+
+第一个重大区别是InnoDB的数据文件本身就是索引文件。从上文知道，MyISAM索引文件和数据文件是分离的，索引文件仅保存数据记录的地址。而在InnoDB中，表数据文件本身就是按B+Tree组织的一个索引结构，这棵树的叶节点data域保存了完整的数据记录。这个索引的key是数据表的主键，因此InnoDB表数据文件本身就是主索引。 
+
+![](https://img-blog.csdn.net/20160926141856136)
+
+
+上图是InnoDB主索引（同时也是数据文件）的示意图，可以看到叶节点包含了完整的数据记录。这种索引叫做聚集索引。因为InnoDB的数据文件本身要按主键聚集，所以InnoDB要求表必须有主键（MyISAM可以没有），如果没有显式指定，则MySQL系统会自动选择一个可以唯一标识数据记录的列作为主键，如果不存在这种列，则MySQL自动为InnoDB表生成一个隐含字段作为主键，这个字段长度为6个字节，类型为长整形。
+
+第二个与MyISAM索引的不同是InnoDB的辅助索引data域存储相应记录主键的值而不是地址。换句话说，InnoDB的所有辅助索引都引用主键作为data域。例如，下图为定义在Col3上的一个辅助索引： 
+
+![](https://img-blog.csdn.net/20160926141856136)
+
+
+这里以英文字符的ASCII码作为比较准则。聚集索引这种实现方式使得按主键的搜索十分高效，但是辅助索引搜索需要检索两遍索引：首先检索辅助索引获得主键，然后用主键到主索引中检索获得记录。
+
+了解不同存储引擎的索引实现方式对于正确使用和优化索引都非常有帮助，例如知道了InnoDB的索引实现后，就很容易明白为什么不建议使用过长的字段作为主键，因为所有辅助索引都引用主索引，过长的主索引会令辅助索引变得过大。再例如，用非单调的字段作为主键在InnoDB中不是个好主意，因为InnoDB数据文件本身是一颗B+Tree，非单调的主键会造成在插入新记录时数据文件为了维持B+Tree的特性而频繁的分裂调整，十分低效，而使用自增字段作为主键则是一个很好的选择。
+
+
+
+
+
+
+
+
+
+
+
+B+Tree内节点去掉了data域，因此可以拥有更大的出度，从而拥有更好的性能。
 
