--- a/数据库/数据库学习-事务.md
+++ b/数据库/数据库学习-事务.md
@@ -1,3 +1,7 @@
+[TOC]
+
+
+
 # 1 事务
 
 ## 1.1 什么是事务
@@ -166,6 +170,13 @@ Serializable（序列化）
 
 ![](http://static.zybuluo.com/c102zkl/1nfwmv998hsv9xhvm1gscqr1/image_1cn3bkt7k12sg159t1t4q19d7obra9.png)
 
+| 事务隔离级别              | 脏读 | 不可重复读 | 幻读 |
+| ------------------------- | ---- | ---------- | ---- |
+| 读未提交 read-uncommitted | 有   | 有         | 有   |
+| 读提交 read-committed     | X    | 有         | 有   |
+| 可重复读 repeatable-read  | X    | X          | 有   |
+| 串行化 serializable       | X    | X          | X    |
+
 ### 1.6.1 未提交读（Read uncommited）
 
 <font color="red">事务中的修改，即使没有提交，对其它事务也是可见的。</font>
@@ -178,7 +189,7 @@ ep:
 
 总结:一个事务还没提交，而别的事务可以看到他其中修改的数据的后果，也就是脏读。
 
-### 1.6.2  提交读（Read commited）
+### 1.6.2 提交读（Read commited）
 
 <font color="red">一个事务只能读取已经提交的事务所做的修改。换句话说，一个事务所做的修改在提交之前对其它事务是不可见的。</font>
 
