--- a/算法/数组排序.md
+++ b/算法/数组排序.md
@@ -228,13 +228,62 @@
 
 <font color="red">4    13     26     27      38    49    49    55    65    97</font>
 
-## 1.4 归并排序
+## 1.4 快速排序
+
+```java
+	/**
+	 * 快速排序(从小到大)
+	 * 思路：每次把一个值当做中间值，操作数组使得数组左边的值比中间值小，右边的值比中间值大，递归调用直至数组有序
+	 * 具体实现：把第一个值当做为中间值（额外变量记录下来），设置leftIndex==left,设置rightIndex==right,从rightIndex开始判断
+	 * 如果rightIndex的值大于中间值则--，如果rightIndex的值小于中间值则把rightIndex的值赋值给leftIndex（使得小的值在左边），
+	 * 反过来再从leftIndex开始进行上面操作，直到数组左边的值比中间值小，右边的值比中间值大，最后递归调用方法直至数组有序
+	 * @param a
+	 * @return
+	 */
+	public int[] quickSort(int[] a, int left, int right) {
+		
+		if(left >= right)
+			return a;
+		
+		int temp = a[left]; // 记录临界值
+		
+		int lowIndex = left;
+		int highIndex = right;
+		
+		while(lowIndex < highIndex) {
+			
+			while( a[highIndex] >= temp && lowIndex < highIndex) {
+				highIndex--;
+			}
+			a[lowIndex] = a[highIndex];
+			
+			while( a[lowIndex] < temp && lowIndex < highIndex) {
+				lowIndex++;
+			}
+			a[highIndex] = a[lowIndex];
+		}
+		
+		int centerIndex = lowIndex; // 退出上面的循环时中心下标centerIndex == lowIndex == rightIndex 
+		a[centerIndex] = temp; // 把最初判断的值赋值到centerIndex的位置
+		
+		quickSort(a, left, centerIndex-1); // 递归调用方法
+		quickSort(a, centerIndex+1, right);
+		
+		return a;
+	}
+```
+
+![](https://github.com/CyC2018/CS-Notes/raw/master/pics/f8047846-efd4-42be-b6b7-27a7c4998b51.png)
+
+上图是第一次排序的结果，以第一个数3为基准是的数组左边的小于3，右边的大于3。
+
+## 1.5 归并排序
 
 归并方法将数组中两个已经排序的部分归并成一个。
 
 
 
-​	
+	
 
 
 
