--- a/算法/数组排序.md
+++ b/算法/数组排序.md
@@ -1,3 +1,5 @@
+[TOC]
+
 # 	1 排序相关
 
 ![算法时间复杂度稳定性综合](https://github.com/RunningHong/LearnNotes/blob/master/picture/%E7%AE%97%E6%B3%95%E6%97%B6%E9%97%B4%E5%A4%8D%E6%9D%82%E5%BA%A6%E7%A8%B3%E5%AE%9A%E6%80%A7%E7%BB%BC%E5%90%88.png?raw=true)
@@ -277,9 +279,7 @@
 
 上图是第一次排序的结果，以第一个数3为基准是的数组左边的小于3，右边的大于3。
 
-## 1.5 归并排序
 
-归并方法将数组中两个已经排序的部分归并成一个。
 
 
 
