add some linux learn notes

--- a/面试相关/知识盲区.md
+++ b/面试相关/知识盲区.md
@@ -1,23 +1,20 @@
 1. 链表回文判断
-
 2. 消息请求后台经过哪些部署的节点
-
 3. cdn  nginx
-
 4. 消息队列
-
 5. redix
-
-6. 拓扑排序
-
-7. 生产者消费之代码实现
+6. 生产者消费之代码实现
 
 
 
-数据库索引
 
-快排
 
-数据库
 
-网络
+
+- linux
+- gradle
+- Kotlin
+
+
+
+
