添加IDEA学习笔记

--- a/面试相关/知识盲区.md
+++ b/面试相关/知识盲区.md
@@ -1,19 +1,20 @@
-1. 链表回文判断
-2. 消息请求后台经过哪些部署的节点
-3. cdn  nginx
-4. 消息队列
-5. redix
-6. 生产者消费之代码实现
+1. 消息请求后台经过哪些部署的节点
+2. cdn  nginx
+3. 消息队列
+4. redix
+5. 生产者消费之代码实现
 
 
 
 
 
-maven，git，idea，linux
-
+- IDEA
+- maven
+- git
 - linux
 - gradle
-- Kotlin
+- kotlin
+- junit
 
 
 
