--- a/工具学习/Intellij IDEA/快捷键操作.md
+++ b/工具学习/Intellij IDEA/快捷键操作.md
@@ -1,6 +1,21 @@
+[TOC]
+
 # Itellij IDEA快捷键操作
 
-## 1 代码提示&代码完成
+## 1 组合代码生成(实时模板)
+
+实时模板详情见 `File-Settings-Editor-Live Templates` 的各个模板。
+
+默认是写下指令后按 `Tab` 生成代码。
+
+| **psfs** | public static final String                       |
+| -------- | ------------------------------------------------ |
+| **psvm** | public static void main(String[] args){ <br /> } |
+| **sout** | System.out.println();                            |
+| **fori** | for (int i = 0; i < ; i++) {<br />}              |
+| **ifn**  | if (var == null) {<br/>}                         |
+
+## 2 代码提示&代码完成
 
 - `Ctrl+Shift+空格`代码完成功能。
 - `Alt+Enter` 快速修复或意图操作（代码完成）。
@@ -12,29 +27,64 @@
 
 
 
-## 2 方法相关
+## 3 方法相关
 
 - `Alt+Q` 查看当前**方法的声明**。
 - `Ctrl+Shift+F7`查看当前方法的某个语句（以return为例子【try...catch也一样】，光标放在需要查看语句的上面）。
 
 
 
-## 3 行操作
+## 4 行操作
 
 - `Ctrl+C` **复制当前行**（在不选择当前行的元素的情况下，按下该组合键）。
 - `双击Ctrl并按住` 在编辑器中**添加几个游标**（多行操作）。为此，按下CTRL两次并按住键，然后按箭头键。
+- `Ctrl+Shift+Up/Down` 移动当前行的代码
 
 
 
-## 4 文件操作
+## 5 文件操作
 
 - `Ctrl+Shift+N` 打开文件。
+- `Ctrl+E` 打开最近的文件，快速定位和切换到其他的工具窗口。
 
 
 
-## 5 类相关
+## 6 类操作
 
 - `Alt+7` 显示类的大纲。（所用方法、类成员等等）
+
+
+
+## 7 调试操作
+
+所有操作都在 Debug 模式下。
+
+| 快捷键 | 介绍                                                         |
+| ------ | ------------------------------------------------------------ |
+| F7     | 进入下一步，如果当前行断点是一个方法，则进入当前方法体内，如果该方法体还有方法，则不会进入该内嵌的方法中 （**进入方法**） |
+| F8     | 进入下一步，如果当前行断点是一个方法，则不进入当前方法体内 （**不进方法**） |
+| F9     | 恢复程序运行，但是如果该断点下面代码还有断点则停在下一个断点上 （**跳到下一个断点【没有断点则退出调试】**） |
+| Alt+F8 | 选中对象，弹出可输入计算表达式调试框，查看该输入内容的调试结果 |
+
+详情介绍：
+
+![](https://img-blog.csdn.net/20170320131146112)
+
+1，rerun XXX，这个就是直接重新跑某个程序。
+2，这个相当于eclipse里面的f8，直接跑完，到下一个断点停下，没有就直接跑完程序。
+3，停止项目或者程序。要是自己的main，点一下就停下了，要是Java web项目，则点2下，就把服务器给停了。
+4，查看所有的断点设置情况。具体详情，下面有示意图，再细细解释。
+5，直接取消所有断点，让所有断点无效。
+6，要是你一不小心把这个下面的布局给弄乱了，你点这个，就把下面的布局给还原咯。
+7，跳转到当前代码所执行的地方，也就是说你在看代码的时候，点到其他地方，一点这个按钮，就到了程序执行到当前哪行的代码的地方。
+8，下一步，如果是方法，他是不会跳进去的。就是一行行的往下走。（eclipse里面的快捷键就是f6）
+9，跳转到详情，如果下一行调试代码是可执行方法，就可以f5进去，查看这个方法的运行详细情况。重点就是点进去执行
+10，从详情跳出去，和上面的9相反。
+11，看字面意思就是跳转到那个光标所在的地方，前提是他能路上没断点拦着。
+12，这个点开之后，可以计算你想要看的代码段的值，后面详细上图。
+13，看意思，同eclipse里面的watch，查看某个对象的值，自定义的对象。
+14，把自定义的查看对象的值，分开到另一个tab页。
+15，有时候当我们步入方法体之后，还想回退到方法体外，点这个按钮后，断点重新回到方法体之外。在继续还是可以再次进到方法内（这个很好的，假设你手快，跳过想断点的方法，然后这个drop frame，出去之后，就可以再次debug啦。这个着重介绍一下）
 
 ## 不常用操作
 
