修改文件目录

--- a/操作系统/银行家算法.md
+++ b/操作系统/银行家算法.md
@@ -1,10 +1,12 @@
-# 1 银行家算法
+[TOC]
+
+# 银行家算法
 
 操作系统的进程可以动态地申请资源，但系统在进行资源分配之前，应先计算此次**资源分配的安全性**。（若此次分配为**安全**的，操作系统则将资源分配给进程，否则令进程等待）
 
 避免死锁的实质在于：<font color="red">系统在进行资源分配时，如何使系统不进入不安全状态。</font>
 
-## 1.1 举例理解
+## 1 举例理解
 
 **战争举例**：
 
@@ -14,7 +16,7 @@
 
 
 
-## 1.2 银行家算法的数据结构（以例子作为出发点）
+## 2 银行家算法的数据结构（以例子作为出发点）
 
 1. <font color="blue">可利用资源向量Available</font>（**代表大将军的部队，部队中各个兵种的人有若干个**）
    这是一个含有m个元素的数组，其中的每一个元素代表一类可利用的资源数目，其初始值是系统中所配置的该类全部可用资源的数目，其数值随该类资源的分配和回收而动态地改变。如果Available[j]=K，则表示系统中现有Rj类资源K个。
@@ -33,7 +35,7 @@
 
 
 
-## 1.3 银行家算法实例
+## 3 银行家算法实例
 
 假定系统中有五个进程{P0，P1，P2，P3，P4}和三类资源{A，B，C}，各种资源的数量分别为10、5、7，在T0时刻的资源分配情况如图示。 （先忽略P1第二行的括号）
 
