--- a/数据库/数据库学习-存储引擎.md
+++ b/数据库/数据库学习-存储引擎.md
@@ -1,8 +1,10 @@
-# 1 存储引擎
+[TOC]
+
+# 存储引擎
 
 这里主要介绍三个存储引擎：InnoDB、MyISAM和MEMORY。
 
-## 1.1 InnoDB和MyISAM
+## 1 InnoDB和MyISAM
 
 虽然MySQL里的存储引擎不只是MyISAM与InnoDB这两个，但常用的就是两个。
 
@@ -21,7 +23,7 @@ MyISAM与InnoDB和MEMORY**两种存储引擎的大致区别表现在**：
 
 
 
-## 1.2 MyISAM与InnoDB选择使用
+## 2 MyISAM与InnoDB选择使用
 
 - **INNODB会支持一些关系数据库的高级功能**，**如事务功能和行级锁，MyISAM不支持**。
 - **MyISAM的性能更优，占用的存储空间少**，所以，选择何种存储引擎，视具体应用而定。
@@ -34,13 +36,13 @@ MyISAM与InnoDB和MEMORY**两种存储引擎的大致区别表现在**：
 
 
 
-## 1.3 MEMORY存储引擎
+## 3 MEMORY存储引擎
 
 **MEMORY是MySQL中一类特殊的存储引擎。它使用存储在内存中的内容来创建表，而且数据全部放在内存中**。这些特性与前面的两个很不同。MEMORY默认使用哈希索引。速度比使用B型树索引快。当然如果你想用B型树索引，可以在创建索引时指定。
 
 
 
-## 1.4 MyISAM与InnoDB两种存储引擎在，事务、锁级别，各自的适用场景？
+## 4 MyISAM与InnoDB两种存储引擎在，事务、锁级别，各自的适用场景？
 
 **事务处理上方面**
 
@@ -54,7 +56,7 @@ MyISAM与InnoDB和MEMORY**两种存储引擎的大致区别表现在**：
 
 
 
-## MySQL存储引擎中的MyISAM和InnoDB区别详解
+## MyISAM和InnoDB区别详解
 
 　　在MySQL 5.5之前，MyISAM是mysql的默认数据库引擎，其由早期的ISAM（Indexed Sequential Access Method：有索引的顺序访问方法）所改良。虽然MyISAM性能极佳，但却有一个显著的缺点： 不支持事务处理。不过，MySQL也导入了另一种数据库引擎InnoDB，以强化参考完整性与并发违规处理机制，后来就逐渐取代MyISAM。
 
