--- a/数据库/数据库学习-悲观锁和乐观锁.md
+++ b/数据库/数据库学习-悲观锁和乐观锁.md
@@ -1,4 +1,6 @@
-# 1 悲观锁和乐观锁
+[TOC]
+
+# 悲观锁和乐观锁
 
 数据库管理系统（DBMS）中的并发控制的任务是确保在多个事务同时存取数据库中同一数据时不破坏事务的**隔离性和统一性**。
 
@@ -6,9 +8,9 @@
 
 针对于不同的业务场景，应该选用不同的并发控制方式。所以，不要把乐观并发控制和悲观并发控制狭义的理解为DBMS中的概念，更不要把他们和数据中提供的锁机制（行锁、表锁、排他锁、共享锁）混为一谈。其实，在DBMS中，悲观锁正是利用数据库本身提供的锁机制来实现的。
 
-## 1.1 悲观锁
+## 1 悲观锁
 
-### 1.1.1 简介
+### 1.1 简介
 
 在DBMS中，悲观并发控制（又名“悲观锁”，Pessimistic Concurrency Control，缩写“PCC”）是一种并发控制的方法。
 
@@ -18,14 +20,14 @@
 
 悲观锁，正如其名，它指的是对数据被外界（包括本系统当前的其他事务，以及来自外部系统的事务处理）修改持保守态度(悲观)，因此，在整个数据处理过程中，将数据处于锁定状态。 悲观锁的实现，往往依靠数据库提供的锁机制 （也只有数据库层提供的锁机制才能真正保证数据访问的排他性，否则，即使在本系统中实现了加锁机制，也无法保证外部系统不会修改数据）
 
-### 1.1.2 数据库中悲观锁的流程
+### 1.2 数据库中悲观锁的流程
 
 1. 在对任意记录进行修改前，先尝试为该记录加上排他锁（exclusive locking）。
 2. 如果加锁失败，说明该记录正在被修改，那么当前查询可能要等待或者抛出异常。 具体响应方式由开发者根据实际需要决定。
 3. 如果成功加锁，那么就可以对记录做修改，事务完成后就会解锁了。
 4. 其间如果有其他对该记录做修改或加排他锁的操作，都会等待我们解锁或直接抛出异常。
 
-### 1.1.3 mysql中使用悲观锁
+### 1.3 mysql中使用悲观锁
 
 要使用悲观锁，我们必须关闭mysql数据库的自动提交属性，因为MySQL默认使用autocommit模式，也就是说，当你执行一个更新操作后，MySQL会立刻将结果进行提交。 set autocommit=0;
 
@@ -46,7 +48,7 @@ commit;/commit work;
 
 上面我们提到，使用 select…for update 会把数据给锁住，不过我们需要注意一些锁的级别，**MySQL InnoDB默认行级锁**。**行级锁都是基于索引的，如果一条SQL语句用不到索引是不会使用行级锁的，会使用表级锁把整张表锁住**，这点需要注意。
 
-### 1.1.4 优点与不足
+### 1.4 优点与不足
 
 优点：
 
@@ -58,9 +60,9 @@ commit;/commit work;
 
 
 
-## 1.2 乐观锁
+## 2 乐观锁
 
-### 1.2.1 简介
+### 2.1 简介
 
 在关系数据库管理系统里，乐观并发控制（又名“乐观锁”，Optimistic Concurrency Control，缩写“OCC”）是一种并发控制的方法。它假设多用户并发的事务在处理时不会彼此互相影响，各事务能够在不产生锁的情况下处理各自影响的那部分数据。在提交数据更新之前，每个事务会先检查在该事务读取数据后，有没有其他事务又修改了该数据。如果其他事务有更新的话，正在提交的事务会进行回滚。
 
@@ -70,7 +72,7 @@ commit;/commit work;
 
 数据版本,为数据增加的一个版本标识。当读取数据时，将版本标识的值一同读出，数据每更新一次，同时对版本标识进行更新。当我们提交更新的时候，判断数据库表对应记录的当前版本信息与第一次取出来的版本标识进行比对，如果数据库表当前版本号与第一次取出来的版本标识值相等，则予以更新，否则认为是过期数据。
 
-### 1.2.2 优点与不足
+### 2.2 优点与不足
 
 乐观并发控制相信事务之间的数据竞争(data race)的概率是比较小的，因此尽可能直接做下去，直到提交的时候才去锁定，所以不会产生任何锁和死锁。但如果直接简单这么做，还是有可能会遇到不可预期的结果，例如两个事务都读取了数据库的某一行，经过修改以后写回数据库，这时就遇到了问题。
 
