--- a/数据库/数据库学习-数据库优化.md
+++ b/数据库/数据库学习-数据库优化.md
@@ -1,8 +1,8 @@
 [TOC]
 
-# 1 数据库优化
+# 数据库优化
 
-## 1.1 SQL优化
+## 1 SQL优化
 
 - 优化insert语句：一次插入多值；
 
@@ -14,7 +14,7 @@
 
 - 很多时候用 exists 代替 in 是一个好的选择。
 
-## 1.2 索引优化
+## 2 索引优化
 
 建议在经常作查询选择的字段、经常作表连接的字段以及经常出现在order by、group by、distinct 后面的字段中建立索引。但必须注意以下几种可能会引起索引失效的情形：
 
@@ -23,22 +23,22 @@
 - 数据类型出现隐式转化（如varchar不加单引号的话可能会自动转换为int型）；
 - 对于多列索引，必须满足最左匹配原则(eg,多列索引col1、col2和col3，则 索引生效的情形包括col1或col1，col2或col1，col2，col3)。
 
-### 1.3 数据库表结构的优化
+### 3 数据库表结构的优化
 
 数据库表结构的优化包括选择合适数据类型、表的范式的优化、表的垂直拆分和表的水平拆分等手段。
 
-### 1.3.1 选择合适数据类型
+### 3.1 选择合适数据类型
 
 - 使用较小的数据类型解决问题；
 - 使用简单的数据类型(mysql处理int要比varchar容易)；
 - 尽可能的使用not null 定义字段；
 - 尽量避免使用text类型，非用不可时最好考虑分表；
 
-### 1.3.2 表的范式的优化
+### 3.2 表的范式的优化
 
 一般情况下，表的设计应该遵循三大范式。
 
-### 1.3.3 表的垂直拆分
+### 3.3 表的垂直拆分
 
 把含有多个列的表拆分成多个表，解决表宽度问题，具体包括以下几种拆分手段：
 
@@ -48,19 +48,19 @@
    　　 
    这样做的好处是非常明显的，具体包括：拆分后业务清晰，拆分规则明确、系统之间整合或扩展容易、数据维护简单。
 
-### 1.3.4 表的水平拆分
+### 3.4 表的水平拆分
 
 表的水平拆分用于解决数据表中数据过大的问题，水平拆分每一个表的结构都是完全一致的。一般地，将数据平分到N张表中的常用方法包括以下两种：
 
 - 对ID进行hash运算，如果要拆分成5个表，mod(id,5)取出0~4个值；
 - 针对不同的hashID将数据存入不同的表中；
 
-### 1.3.5 系统配置的优化
+### 3.5 系统配置的优化
 
 - 操作系统配置的优化：增加TCP支持的队列数
 - mysql配置文件优化：Innodb缓存池设置(innodb_buffer_pool_size，推荐总内存的75%)和缓存池的个数（innodb_buffer_pool_instances）
 
-### 1.3.6 硬件的优化
+### 3.6 硬件的优化
 
 - CPU：核心数多并且主频高的
 - 内存：增大内存
