--- a/算法/判断素数.md
+++ b/算法/判断素数.md
@@ -1,8 +1,10 @@
-#  1 判断素数
+[TOC]
+
+#  判断素数
 
 素数就是一个数被除数除了1和它本身就没有其他被除数了（1除外，1不是素数）
 
-## 1.1 常规判断素数的方法
+## 1 常规判断素数的方法
 
 ```Java
 	/**
@@ -24,7 +26,7 @@
 	}
 ```
 
-## 1.2 开根号判断法
+## 2 开根号判断法
 
 ```Java
 	/**
@@ -47,7 +49,7 @@
 
 注意：这里i<=math.sqrt(num)需要等于，如果没有等于，如同9就会判断出错。
 
-## 1.3 筛选法
+## 3 筛选法
 
 ```java
 	/**
