--- a/算法/数组排序.md
+++ b/算法/数组排序.md
@@ -1,14 +1,14 @@
 [TOC]
 
-# 	1 排序相关
+# 	排序相关
 
 ![算法时间复杂度稳定性综合](https://github.com/RunningHong/LearnNotes/blob/master/picture/%E7%AE%97%E6%B3%95%E6%97%B6%E9%97%B4%E5%A4%8D%E6%9D%82%E5%BA%A6%E7%A8%B3%E5%AE%9A%E6%80%A7%E7%BB%BC%E5%90%88.png?raw=true)
 
 **稳定性**：通俗地讲就是能保证排序前两个相等的数据其在序列中的先后位置顺序与排序后它们两个先后位置顺序相同。
 
-## 1.1 冒泡排序
+## 1 冒泡排序
 
-### 1.1.1 传统冒泡
+### 1.1 传统冒泡
 
 ```java
     /**
@@ -39,7 +39,7 @@
 
 如果两个相等的元素没有相邻，那么即使通过前面的两两交换把两个元素相邻起来，最终也不会交换它俩的位置，所以相同元素经过排序后顺序并没有改变。所以冒泡排序是一种**稳定**排序算法。 
 
-### 1.1.2 升级版（设置判断标志位）
+### 1.2 升级版（设置判断标志位）
 
 ```java
 	/**
@@ -70,7 +70,7 @@
 	}
 ```
 
-## 1.2 选择排序
+## 2 选择排序
 
 ```java
     /**
@@ -104,11 +104,11 @@
 
 算法**不稳定**; 举个例子：序列5 8 5 2 9， 我们知道第一趟选择第1个元素5会与2进行交换，那么原序列中两个5的相对先后顺序也就被破坏了。所以选择排序是一个**不稳定**的排序算法。          
 
-## 1.3 插入排序
+## 3 插入排序
 
 插入排序有可以分为**直接插入排序**和**希尔排序**。
 
-### 1.3.1 直接插入排序
+### 3.1 直接插入排序
 
 直接插入版本一：
 
@@ -167,7 +167,7 @@
 
 ![img](https://github.com/RunningHong/LearnNotes/blob/master/picture/selectionSort.png?raw=true)
 
-### 1.3.2 希尔排序
+### 3.2 希尔排序
 
 ```java
 	/**
@@ -230,7 +230,7 @@
 
 <font color="red">4    13     26     27      38    49    49    55    65    97</font>
 
-## 1.4 快速排序
+## 4 快速排序
 
 ```java
 	/**
