--- a/设计模式/设计模式学习笔记1-面向对象设计原则.md
+++ b/设计模式/设计模式学习笔记1-面向对象设计原则.md
@@ -1,35 +1,37 @@
-# 1.单一职责原则
+[TOC]
+
+# 1 单一职责原则
 
 设计原则简介：**类的职责要单一**，不能将太多的职责放在一个类中。
 单一职责原则（Single Responsibility Principle，SRP）：一个对象应该只包含单一的职责，并且该职责被完整地封装在一个类中。
 单一职责原则是实现**高内聚、低耦合**的指导方针。
 
-# 2.开闭原则
+# 2 开闭原则
 
 设计原则简介：软件实体对**扩展开放**，对**修改关闭**。
 开闭原则（Open-Closed Principle，OCP）：软件实体对扩展开放，对修改关闭。在设计一个模块时，应当是这个模块可以在不被修改的前提下被扩展。
 
-# 3.里氏代换原则
+# 3 里氏代换原则
 
 设计原则简介：一个可以接受**基类对象**的地方必然可以接受一个**子类对象**。
 
-# 4.依赖倒转原则
+# 4 依赖倒转原则
 
 设计原则简介：针对**抽象层编程**，**不**针对**具体类编程**（针对接口或抽象类编程，而不是针对具体类编程）。
 依赖倒转原则（Dependence Inversion Principle，DIP）：高层模块不应该依赖底层模块，他们都应该依赖抽象。抽象不应该依赖于细节，细节应该依赖于抽象。
 
-# 5.接口隔离原则
+# 5 接口隔离原则
 
 设计原则简介：使用**多个接口**代替一个**统一接口**。
 接口隔离原则（Interface Segregation Principle，ISP）：哭护短不应该依赖那些它不需要的接口。
 
-# 6.合成复用原则
+# 6 合成复用原则
 
 设计原则简介：多使用**组合和聚合**，少或者不使用**继承**。
 合成复用原则（Composite Reuse Principle，CRP）：又称为组合/聚合复用原则。
 该设计原则可以降低类与类之间的耦合度。
 
-# 7.迪米特原则
+# 7 迪米特原则
 
 设计原则简介：一个实体对其他**实体的引用越少越好**（两个类不直接相互作用，而是通过引入一个第三者发生间接交互）。
 用于减低系统的耦合度，使类与类之间保持松散的耦合关系。
