--- a/设计模式/设计模式学习笔记3-代理模式.md
+++ b/设计模式/设计模式学习笔记3-代理模式.md
@@ -1,4 +1,6 @@
-# 1 设计模式学习笔记3-代理模式
+[TOC]
+
+# 设计模式学习笔记3-代理模式
 
 代理的作用就是让我们关注自己的**正事**，其他的事情由代理商来帮我们办。
 
@@ -8,7 +10,7 @@
 
 ![代理模式](https://github.com/RunningHong/LearnNotes/blob/master/picture/%E4%BB%A3%E7%90%86%E6%A8%A1%E5%BC%8F.png?raw=true)
 
-## 1.1 静态代理的实现
+## 1 静态代理的实现
 
 **接口类**：需要干什么
 
@@ -99,7 +101,7 @@ public class StaticProxyTest {
 
 静态代理的缺点：当我们更改业务，比如不买票，而是买水等等，那么我们每一项业务都需要增加新的代理类，这样大大的增大了程序的负担，也是我们不想看见的(这时我们就需要使用动态代理类)。
 
-## 1.2 动态代理的实现
+## 2 动态代理的实现
 
 动态代理主要是使用**InvocationHandler**接口和**Proxy**类来实现动态代理。
 
@@ -246,7 +248,7 @@ HandleInterface handleProxy = (HandleInterface)Proxy.newProxyInstance(
 
 
 
-##代理模式的应用场景
+## 3 代理模式的应用场景
 
 在服务器中存放了一个很大的图片，这时如果用户直接访问包含这个图片的网页，则会出现网页出来了，图片等很久都没出来的情况，这时我们就可以使用代理模式，即在后台对图片进行一系列的处理（减少图片的像素），把处理过的图片用来代替原图片，这样就可以加快网页的显示。
 
