--- a/Java/基础知识/内部类知识.md
+++ b/Java/基础知识/内部类知识.md
@@ -1,8 +1,10 @@
-# 1 内部类
+[TOC]
+
+# 内部类
 
 内部类是一个编译时的概念，一旦编译成功，就会成为完全不同的类。对于一个名为outer的外部类和其内部定义的名为inner的内部类。编译完成后出现outer.class和outer$inner.class两类。所以内部类的成员变量/方法名可以和外部类的相同。
 
-## 1.1 成员内部类
+## 1 成员内部类
 
 **成员内部类是外部类的成员，可以直接使用外部类的成员和方法，即使是private**。
 
@@ -27,7 +29,7 @@ public class Outer {
 }
 ```
 
-## 1.2 局部内部类
+## 2 局部内部类
 
 局部内部类是定义在一个方法或者一个作用域里面的类，它和成员内部类的区别在于局部内部类的访问仅限于方法内或者该作用域内。
 
@@ -53,7 +55,7 @@ class Man{
 
 <font color="red">局部内部类就像是方法里面的一个局部变量一样，是不能有public、protected、private以及static修饰符的。</font>
 
-## 1.3 静态内部类
+## 3 静态内部类
 
 静态内部类是不需要依赖于外部类的，这点和类的静态成员属性有点类似，**并且它不能使用外部类的非static成员变量或者方法**。
 
@@ -71,7 +73,7 @@ class Outter {
 }
 ```
 
-## 1.4 匿名内部类
+## 4 匿名内部类
 
 **不使用**匿名内部类的情况
 
@@ -134,7 +136,7 @@ public class Demo {
 
 
 
-## 非静态内部类和静态内部类区别
+## 5 非静态内部类和静态内部类区别
 
 1. 静态内部类可以不依赖与外部类实例被实例化，非静态内部类需要在外部类被实例化后才能被实例化。
 2. 局部内部类不能直接访问外部类的成员，除非是静态内部类访问外部类的静态成员。
