--- a/Java/基础知识/抽象类和接口.md
+++ b/Java/基础知识/抽象类和接口.md
@@ -1,8 +1,10 @@
-# 1 抽象类和接口
+[TOC]
 
-## 1.1 抽象类
+# 抽象类和接口
 
-### 1.1.1 抽象方法
+## 1 抽象类
+
+### 1.1 抽象方法
 
 首先说到抽象类那么我们来说说抽象方法，抽象方法是一种特殊的方法，它只有声明，没有具体的实现：
 
@@ -16,7 +18,7 @@ abstract void fun();
 
 抽象类中也可以不声明一个抽象方法。
 
-### 1.1.2 定义一个抽象类
+### 1.2 定义一个抽象类
 
 ```java
 [public] abstract class ClassName {
@@ -28,7 +30,7 @@ abstract void fun();
 
 抽象类跟普通类一样也可以有成员变量和成员方法。
 
-### 1.1.3 抽象类和普通类的区别
+### 1.3 抽象类和普通类的区别
 
 - **抽象方法**必须为public或者protected（如果声明为private，则子类无法实现该方法），缺省为public
 - 抽象类不能用来创建对象。
@@ -36,9 +38,9 @@ abstract void fun();
 
 
 
-## 1.2 接口
+## 2 接口
 
-### 1.2.1 接口定义
+### 2.1 接口定义
 
 接口是对行为的抽象。
 
@@ -57,12 +59,12 @@ class ClassName implements Interface1,Interface2,[....]{
 }
 ```
 
-### 1.2.2 注意
+### 2.2 注意
 
 - 接口中的**变量**会被隐式声明为<font color="red">public static final</font>，为private或protected会编译出错。
 - 接口中的**方法**会被隐式声明为<font color="red">public abstract</font>，（用其他关键字如：private、protect、static、final会报编译错误）
 
-### 1.2.3 JDK8中的接口
+### 2.3 JDK8中的接口
 
 <font color="blue">在JDK8中可以在接口中定义默认的方法、以及静态方法的实现。</font>
 
@@ -79,7 +81,7 @@ default void forEach(Consumer<? super T> action) {
 }
 ```
 
-### 1.2.4 JDK8接口注意事项
+### 2.4 JDK8接口注意事项
 
 - 非default方法、static方法不能有实现，否则会编译出错：Abstract methods do not specify a body
 - default方法、static方法必须实现，否则会编译出错：This method requires a body instead of a semicolon
@@ -89,7 +91,7 @@ default void forEach(Consumer<? super T> action) {
 
 
 
-## 1.3 抽象类和接口的区别
+## 3 抽象类和接口的区别
 
 - **方法层面**：抽象类可以提供成员方法的实现细节，而接口中只能存在public abstract 方法、default方法和static方法；
 - **成员变量层面**：抽象类中的**成员变量**可以是各种类型的，而接口中的成员变量只能是public static final类型的；
