--- a/数据库/数据库学习-范式.md
+++ b/数据库/数据库学习-范式.md
@@ -1,4 +1,6 @@
-# 1 数据库的范式
+[TOC]
+
+# 数据库的范式
 
 范式：符合是一种级别的关系模式的集合，表示一个关系内部各属性之间的联系的合理化程度。
 
@@ -10,7 +12,7 @@
 
 
 
-## 1.1 基础知识
+## 1 基础知识
 
 - 实体：现实世界中客观存在的事物的抽象。
 - 属性：实体的一个属性，即一个字段。
@@ -24,9 +26,9 @@
 
 
 
-## 1.2 不好的设计
+## 2 不好的设计
 
-### 1.2.1 数据冗余
+### 2.1 数据冗余
 
 数据冗余：出现大量的冗余数据。
 
@@ -41,7 +43,7 @@
 
 在这个表中大量重复了**计算机学院**，大大消耗了数据库的存储空间，这既是数据冗余。
 
-### 1.2.2 插入异常
+### 2.2 插入异常
 
 插入异常：数据由于某种原因无法插入。
 
@@ -51,7 +53,7 @@
 
 当新增一门课程时，由于还没有学生选这门课（主键不存在），那么课程的相关信息也是不能插入的。
 
-### 1.2.3 更新异常
+### 2.3 更新异常
 
 更新异常：一个元素进行了修改，所有的与该元素有关的元组都需要修改。
 
@@ -64,7 +66,7 @@
 
 当计算机学院更名为人工智能学院时，我需要把，学生表中所有的数据都更新一遍。
 
-### 1.2.4 删除异常
+### 2.4 删除异常
 
 删除异常：删除一些数据，把不想删的数据也删掉了。
 
@@ -74,7 +76,7 @@
 
 
 
-## 1.3 第一范式（1NF——不可再分）
+## 3 第一范式（1NF——不可再分）
 
 数据表中的每一列数据都是不可分割的。
 
@@ -90,7 +92,7 @@
 
 
 
-## 1.4 第二范式（2NF——无部分依赖）
+## 4 第二范式（2NF——无部分依赖）
 
 定义：在第一范式的前提上，非主属性完全函数依赖于码。
 
@@ -116,7 +118,7 @@
 
 
 
-## 1.5 第三范式（3NF——无传递依赖）
+## 5 第三范式（3NF——无传递依赖）
 
 定义：在满足第二范式的基础上，没有传递依赖。
 
@@ -143,7 +145,7 @@
 
 
 
-## 1.6 巴斯-科德范式（BCNF）
+## 6 巴斯-科德范式（BCNF）
 
 BCNF与[第三范式](https://zh.wikipedia.org/wiki/%E7%AC%AC%E4%B8%89%E8%8C%83%E5%BC%8F)的不同之处在于：第三范式中不允许[非主属性](https://zh.wikipedia.org/w/index.php?title=%E9%9D%9E%E4%B8%BB%E5%B1%9E%E6%80%A7&action=edit&redlink=1)被另一个非主属性决定，但第三范式允许主属性被非主属性决定；而在BCNF中，任何属性（包括非主属性和主属性）都不能被非主属性所决定。
 
