--- a/算法/二叉树遍历.md
+++ b/算法/二叉树遍历.md
@@ -1,4 +1,6 @@
-**示例树（下面的所有代码都基于此树型结构）**
+[TOC]
+
+示例树（下面的所有代码都基于此树型结构）
 
 ![](https://github.com/RunningHong/LearnNotes/blob/master/picture/binaryTree.png?raw=true)
 
