--- a/算法/拓扑排序.md
+++ b/算法/拓扑排序.md
@@ -1,6 +1,8 @@
-# 1 拓扑排序
+[TOC]
 
-## 1.1 什么是拓扑排序
+# 拓扑排序
+
+## 1 什么是拓扑排序
 
 在图论中，拓扑排序是一个有**向无环图**（必须条件）的所有顶点的进行排序的线性序列。而且序列必须满足两个条件：
 
@@ -11,19 +13,19 @@
 
 ![拓扑排序示例](https://github.com/RunningHong/LearnNotes/blob/master/picture/%E6%8B%93%E6%89%91%E6%8E%92%E5%BA%8F%E7%A4%BA%E4%BE%8B.png?raw=true)
 
-## 1.2 进行排序
+## 2 进行排序
 
 ![拓扑排序分步](https://github.com/RunningHong/LearnNotes/blob/master/picture/%E6%8B%93%E6%89%91%E6%8E%92%E5%BA%8F%E5%88%86%E6%AD%A5.png?raw=true)
 
 排序序列：1 ，2， 4， 3， 5
 
-### 排序规则
+### 2.1 排序规则
 
 <font color="blue">每次循环都是找到**入度为0**的点，对这个点进行输出，并把这个点关联的边去掉。</font>
 
 <font color="blue">循环以上的步骤直到所有的点都输出完。</font>
 
-## 1.3 拓扑排序的应用
+## 3 拓扑排序的应用
 
 **工程例子**：在一个工程中有很多的子任务（以上图为例，一个工程共5个子任务），除了开始任务其他的每个任务都需要等待前面的任务做完了才能继续进行这个任务，那么在工程开始的时候工程负责人就需要进行规划任务的执行顺序，以保证工程能够正常运行。
 
