--- a/计算机网络/应用层常用协议.md
+++ b/计算机网络/应用层常用协议.md
@@ -1,6 +1,6 @@
 # 应用层常用协议
 
-1). TCP对应的应用层协议
+## 1 TCP对应的应用层协议
 
 - FTP：定义了文件传输协议，使用21端口。常说某某计算机开了FTP服务便是启动了文件传输服务。下载文件，上传主页，都要用到FTP服务。
 - Telnet：它是一种用于远程登陆的端口，用户可以以自己的身份远程连接到计算机上，通过这种端口可以提供一种基于DOS模式下的通信服务。如以前的BBS是-纯字符界面的，支持BBS的服务器将23端口打开，对外提供服务。
@@ -10,7 +10,7 @@
 
 ------
 
-2). UDP对应的应用层协议
+## 2 UDP对应的应用层协议
 
 - DNS：用于域名解析服务，将域名地址转换为IP地址。DNS用的是53号端口。
 - SNMP：简单网络管理协议，使用161号端口，是用来管理网络设备的。由于网络设备很多，无连接的服务就体现出其优势。
