修改一些笔记目录结构&添加多线程笔记

--- a/后端相关/设计模式/设计模式学习笔记4-策略模式.md
+++ b/后端相关/设计模式/设计模式学习笔记4-策略模式.md
@@ -118,9 +118,9 @@ public class StrategyPatternDemo {
 
 ## 4 总结
 
-当我们在外出旅游的时候我们可以选择很多的出行方式（走路、坐客车、坐火车、坐飞机。。。）,原始的方式是我们采用if的形式进行判断，根据传入的不同我们采用不同的方式，这样的缺点就是：当我们下次需要改变出现方式的时候（增加方式如：坐轮船），这样我们的代码就需要更改很多，这样就不符合**开闭原则**，所以我们需要使用策略模式。
+当我们在外出旅游的时候我们可以选择很多的出行方式（走路、坐客车、坐火车、坐飞机。。。）,原始的方式是我们采用if的形式进行判断，根据传入的不同我们采用不同的方式，这样的缺点就是：当我们下次需要改变出行方式的时候（增加方式如：坐轮船），这样我们的代码就需要更改很多（更改if），这样就不符合**开闭原则**，所以我们需要使用策略模式。
 
-策略模式的主要特种是**实现同一个接口。** 比如：各个出行方式都需要实现一个指定的接口（出行接口），但每一出行类对于接口方法都有自己的实现方式（形成差别），当我们新增一个出行类就只需要实现出行接口。还有一个很重要的类：**Context类** （可以理解为旅行社、一个管理类），这个类通过传入不同的策略（出行方式），就可以进行不同的方式进行旅游。
+策略模式的主要特征是**实现同一个接口。** 比如：各个出行类都需要实现一个指定的接口（出行接口），但每一出行类对于接口方法都有自己的实现方式（形成差别），当我们新增一个出行类时只需要实现出行接口的方法。还有一个很重要的类：**Context类** （可以理解为旅行社、一个管理类），这个类通过传入不同的策略（出行类实例），就可以采用不同的方式进行出行。
 
-优点：扩展方便，当需要扩展的时候，只需要增代码，不会再原来的代码中进行改变，符合开闭原则。
+优点：扩展方便，当需要扩展的时候，只需要增代码，不会在原来的代码中进行修改，符合开闭原则。
 
