--- a/后端相关/设计模式/设计模式学习笔记4-策略模式.md
+++ b/后端相关/设计模式/设计模式学习笔记4-策略模式.md
@@ -116,7 +116,15 @@ public class StrategyPatternDemo {
 10 * 5 = 50
 ```
 
-## 4 总结
+## 4 与简单工厂模式的区别
+
+策略模式和简单工厂模式看起来非常相似，都是通过多态来实现不同子类的选取，这种思想应该是从程序的整体来看得出的。
+
+在简单工厂模式中我们只需要传递相应的条件就能得到想要的一个对象（告诉别人我要干嘛、别人去做），然后通过这个对象实现算法的操作。而策略模式，
+使用时必须首先创建一个想使用的类对象（自己去做），然后将该对象最为参数传递进去，通过该对象调用不同的算法。
+在简单工厂模式中实现了通过条件选取一个类去实例化对象，策略模式则将选取相应对象的工作交给模式的使用者，它本身不去做选取工作。
+
+## 5 总结
 
 当我们在外出旅游的时候我们可以选择很多的出行方式（走路、坐客车、坐火车、坐飞机。。。）,原始的方式是我们采用if的形式进行判断，根据传入的不同我们采用不同的方式，这样的缺点就是：当我们下次需要改变出行方式的时候（增加方式如：坐轮船），这样我们的代码就需要更改很多（更改if），这样就不符合**开闭原则**，所以我们需要使用策略模式。
 
