添加contentType学习笔记

--- a/Web学习/关于相对路径绝对路径.md
+++ b/Web学习/关于相对路径绝对路径.md
@@ -1,8 +1,10 @@
+[TOC]
+
 # 相对路径&绝对路径
 
 在相对路径和绝对路径上总是搞不清楚，这次在这里再次总结一下（使用ajax中的url做范例）。
 
-## 1 绝对路径
+## 1 绝对路径(/)
 
 绝对路径就是从ip地址开始的路径。
 
@@ -25,7 +27,7 @@ $.ajax({
 
 如果url参数是以 `/` 开始就是使用的绝对路径，也就是说请求地址是忽略我们设置的项目路径地址（`/A`）的。
 
-## 2 相对地址
+## 2 相对地址(./ & ../)
 
 所谓的相对地址就是相对html页面的地址（**不要理解成了相对js脚本的地址，这很重要**）。
 
