--- a/大数据/0-linux/每天一个linux命令/01-ls命令.md
+++ b/大数据/0-linux/每天一个linux命令/01-ls命令.md
@@ -108,8 +108,9 @@ ls [选项] [目录名]
 **例二：列出当前目录中所有以“t”开头的目录的详细内容，可以使用如下命令：**
 
 ```
-命令：ls -l t
-可以查看当前目录下文件名以“t”开头的所有文件的信息。其实，在命令格式中，方括号内的内容都是可以省略的，对于命令ls而言，如果省略命令参数和操作对象，直接输入“ ls ”，则将会列出当前工作目录的内容清单。
+命令：ls -l t*
+可以查看当前目录下文件名以“t”开头的所有文件的信息。
+其实，在命令格式中，方括号内的内容都是可以省略的，对于命令ls而言，如果省略命令参数和操作对象，直接输入“ ls ”，则将会列出当前工作目录的内容清单。
 ```
 
 **例三：**只列出文件下的子目录
@@ -232,10 +233,10 @@ drwxr-xr-x 16 1016 1016      4096 2012-10-11 03:25 subversion-1.6.1
 打开/etc/bashrc, 加入如下一行:
 alias ls="ls --color"
 下次启动bash时就可以像在Slackware里那样显示彩色的目录列表了, 其中颜色的含义如下:
-\1. 蓝色-->目录
-\2. 绿色-->可执行文件
-\3. 红色-->压缩文件
-\4. 浅蓝色-->链接文件
-\5. 灰色-->其他文件
+1. 蓝色-->目录
+2. 绿色-->可执行文件
+3. 红色-->压缩文件
+4. 浅蓝色-->链接文件
+5. 灰色-->其他文件
 ```
 
