数仓-拉链表

--- a/大数据/数据仓库/02-拉链表.md
+++ b/大数据/数据仓库/02-拉链表.md
@@ -25,29 +25,183 @@
 
 ## 2 拉链表的设计与实现
 
-### 2.1  现实场景
+### 2.1 现实场景
 
 就拿我们注册的用户信息来说，按天来看，每天都有新增的用户信息，还有一些是在原有基础上更新的数据信息。
 
 一般我们的用户最新的用户信息都会存在于mysql中,并且存放的是新的信息，如下表：
 
-| user_id | user_name | phone | create_time | update_time |
+| user_id | user_name | phone | create_date | update_date |
 | ------- | --------- | ----- | ----------- | ----------- |
-| 1       | A         | 1111  | 2020-01-01  | 2020-01-01  |
-| 2       | B         | 2222x | 2020-01-01  | 2020-01-02  |
+| 1       | A         | 1111  | 2019-12-30  | 2019-12-30  |
+| 2       | B         | 2222  | 2020-01-01  | 2020-01-01  |
 | 3       | C         | 3333x | 2020-01-01  | 2020-01-02  |
-
-
+| 4       | D         | 4444  | 2020-01-02  | 2020-01-02  |
 
 ### 2.2 拉链表设计
 
-首先先看一下拉链表的特点：
+首先看一下拉链表的特点：
 
-1. 首先需要一堆基础数据，代表当前最新的状态，后续的更新都是在这基础上更改的
-2. 数据新增：每天更新的数据如果是新增的就直接加进去
-3. 数据更新：每天更新的数据如果是更新状态就把原来的数据的状态置于失效，把这次更新的数据置于最新
+1. 数据有主键（如user_id, order_no）
+2. 首先需要一堆基础数据，代表当前最新的状态，后续的更新都是在这基础上更改的
+3. 数据新增：每天更新的数据如果是新增的就直接加进去
+4. 数据更新：每天更新的数据如果是更新状态就把原来的数据的状态置于失效，把这次更新的数据置于最新
 
-### 2.3 拉链表实现
+以2.1的场景来举例
 
+假设2020-01-01的用户信息是这样的
 
+| user_id | user_name | phone | create_date | update_date | 备注               |
+| ------- | --------- | ----- | ----------- | ----------- | ------------------ |
+| 1       | A         | 1111  | 2019-12-30  | 2019-12-30  | 很早前建立的信息   |
+| 2       | B         | 2222  | 2020-01-01  | 2020-01-01  | 2020-01-01当天新增 |
+| 3       | C         | 3333  | 2020-01-01  | 2020-01-01  | 2020-01-01当天新增 |
+
+假设2020-01-02的用户信息变更成这样
+
+| user_id | user_name | phone | create_date | update_date |                                                |
+| ------- | --------- | ----- | ----------- | ----------- | ---------------------------------------------- |
+| 1       | A         | 1111  | 2019-12-30  | 2019-12-30  | 信息相对于2020-01-01没变化                     |
+| 2       | B         | 2222  | 2020-01-01  | 2020-01-01  | 信息相对于2020-01-01没变化                     |
+| 3       | C         | 3333x | 2020-01-01  | 2020-01-02  | 信息相对于2020-01-01<br />phone由3333变为3333x |
+| 4       | D         | 4444  | 2020-01-02  | 2020-01-02  | 2020-01-02新增                                 |
+
+那么把上面的场景设计成拉链表将会是：
+
+| user_id | user_name | phone | begin_date | end_date   |
+| ------- | --------- | ----- | ---------- | ---------- |
+| 1       | A         | 1111  | 2019-12-30 | 9999-99-99 |
+| 2       | B         | 2222  | 2020-01-01 | 9999-99-99 |
+| 3       | C         | 3333  | 2020-01-01 | 2020-01-01 |
+| 3       | C         | 3333x | 2020-01-02 | 9999-99-99 |
+| 4       | D         | 4444  | 2020-01-02 | 9999-99-99 |
+
+说明：
+
+```
+begin_date:表示该条记录的生命周期开始时间
+end_date:表示该条记录的生命周期结束时间
+    如果end_date=‘9999-99-99’代表当前信息在当前为有效状态，即从创建后没有信息变更
+
+查询当前有效的信息：
+	select * from dw_user_his_di where end_date='9999-99-99'
+	
+查询2020-01-01的历史快照：
+	select * from dw_user_his_di where begin_date<='2020-01-01' and end_day>='2020-01-01'
+	解释：
+	begin_date<='2020-01-01'：数据的创建日期要<='2020-01-01'（如果相同的user_id在2020-01-01后面更新了数据，更新的数据的begin_day一定是>'2020-01-01'的，所以需要把这部分数据剔除）。
+	end_day>='2020-01-01'：数据的结束日期要>='2020-01-01'（前面限制的begin_date<='2020-01-01'会取到历史的变更信息，比如：用户x,在2019-01-01创建，在2219-01-01修改信息，这样就取出多条数据，再限制结束日期要>='2020-01-01'就能取到截止2020-01-01最新的信息）
+```
+
+### 2.3 拉链表实现（hive）
+
+拉链表的时间粒度：**比如说拉链表每天只取一个状态，也就是说如果一天有 3 个状态变更，我们只取最后一个状态，这种天粒度的表其实已经能解决大部分的问题了。**
+
+#### 2.3.1 创建拉链表
+
+```sql
+create table dw_user_his_nd (
+	user_id string comment '用户id',
+	user_name string comment '用户名',
+	phone string comment '手机号',
+	begin_date string comment '生命周期开始时间',
+	end_date string comment '生命周期结束时间'
+) comment '用户拉链表'
+stored as orc
+location '/dw/dw_user_his_nd'
+```
+
+#### 2.3.2 初始化拉链表
+
+我们现在开始实现一个拉链表，拉链表的数据更新都是基于基础数据，在基础数据上更新或者新增。
+
+```sql
+-- 假设我们当天拿到了上一天（2020-01-01）最新的所有的用户信息，并把信息存入一个hive表中
+-- 如select * from user where update_date<='2020-01-01';把结果数据导入hdfs中
+-- 该表只在初始化的时候才用到
+create external table ods_user_init_snap_nd (
+	user_id string comment '用户id',
+	user_name string comment '用户名',
+	phone string comment '手机号',
+	create_date string comment 'mysql中的创建时间',
+	update_date string comment 'mysql中的更新时间'
+) comment '拉链表初始化需要的信息'
+stored as textfile
+location '/ods/ods_user_init_snap_nd'
+```
+
+进行初始化
+
+```sql
+insert overwrite table dw_user_his_nd 
+select
+	user_id,
+	user_name,
+	phone,
+	-- 由于初始化表中没有记录变更信息，这里直接使用数据库中的创建时间作为生命周期的开始时间
+	create_date as  begin_date, 
+	'9999-99-99' as end_date
+from ods_user_init_snap_nd
+```
+
+#### 2.3.3 每日变更的信息（包含新增和修改）
+
+```sql
+-- 如果create_date=update_date则代表当日新增的用户信息
+-- 如果create_date!=update_date则代表当日更新的用户信息
+-- 在2020-01-03我们从mysql中抽取2020-01-02变化的数据并存放到dt=2020-01-02的分区中
+-- select * from user where update_date='2020-01-02'
+create external table ods_user_new_part_di (
+	user_id string comment '用户id',
+	user_name string comment '用户名',
+	phone string comment '手机号',
+    create_date string comment '创建时间',
+    update_date string comment '更新时间'
+) comment '每日新增用户信息'
+partitioned by (
+	dt string comment '更新日期'
+)
+stored as textfile
+location '/ods/ods_user_new_part_di'
+```
+
+#### 2.3.4 更新拉链表
+
+数据总体分为3部分：
+
+1. 未更新的数据（拉链表里的老数据，这部分不动）
+2. 当天更新的数据（在拉链表中的直接把结束日期更改为当天）
+3. 完全新增的数据和更新的新状态数据（直接合并入拉链表）
+
+```sql
+-- 2020-01-03更新2020-01-02变化的信息到拉链表
+with user_add_and_update_mes as (
+	-- 当天新增和更新的数据
+    select
+    	user_id,
+    	user_name,
+    	phone,
+    	create_date,
+    	update_date
+    from ods_user_new_part_di
+    where dt='2020-01-02'
+)
+insert overwirte table dw_user_his_nd
+select -- 历史数据(如果数据无改变，则直接插入；如果数据更新了，则更改老数据的失效日期更改为指定日期)
+	t1.user_id as user_id,
+	t1.user_name as user_name,
+	t1.phone as phone,
+	t1.begin_date as begin_date,
+	if(t2.user_id is null, end_date, '2020-01-02') as end_date
+from dw_user_his_nd t1
+left join user_add_and_update_mes t2 on t1.user_id=t2.user_id
+union all
+select -- 新增或者更新的新状态数据
+	user_id,
+	user_name,
+	phone,
+	create_date as begin_date,
+	'9999-99-99' as end_date
+from user_add_and_update_mes
+```
 
