update python learning

--- a/04-大数据/02-Python/03-字符串操作.md
+++ b/04-大数据/02-Python/03-字符串操作.md
@@ -102,3 +102,43 @@ strname[start : end : step]
     print(str[:: 3]) # hltssosan
 ```
 
+## 3 字符串长度
+
+```
+len（string）
+```
+
+## 4 join 方法
+
+```
+语法：newstr = str.join(iterable)
+
+各参数的含义如下：
+newstr：表示合并后生成的新字符串；
+str：用于指定合并时的分隔符；
+iterable：做合并操作的源字符串数据，允许以列表、元组等形式提供。
+
+
+>>> list = ['c','biancheng','net']
+>>> '.'.join(list)
+'c.biancheng.net'
+```
+
+## 5 replace方法
+
+```
+语法：str.replace(old, new[, max])
+old -- 将被替换的子字符串。
+new -- 新字符串，用于替换old子字符串。
+max -- 可选字符串, 替换不超过 max 次（不选默认全部替换）
+
+
+str = "this is string example....wow!!! this is really string";
+print str.replace("is", "was");
+print str.replace("is", "was", 3);
+
+输出：
+thwas was string example....wow!!! thwas was really string
+thwas was string example....wow!!! thwas is really string
+```
+
