python-json & upate

--- a/04-大数据/01-Linux/03-Shell/05-判断.md
+++ b/04-大数据/01-Linux/03-Shell/05-判断.md
@@ -35,6 +35,7 @@ str1　　　　　　　　   当串str1为非空时为真
 
 
 ########################### 文件判断 ###############################
+-e filename 如果 filename存在，则为真
 -r file　　　　　用户可读为真 
 -w file　　　　　用户可写为真 
 -x file　　　　　用户可执行为真 
@@ -44,6 +45,32 @@ str1　　　　　　　　   当串str1为非空时为真
 -b file　　　　　文件为块特殊文件为真 
 -s file　　　　　文件大小非0时为真 
 -t file　　　　　当文件描述符(默认为1)指定的设备为终端时为真
+
+if [ ! -e $result_name ];then
+   mkdir -p $result_name
+fi
+
+ 
+#判断文件夹是否存在 -d
+if [[ ! -d "$testPath" ]]; then
+ echo "文件夹不存在"
+else
+ echo "文件夹存在"
+fi
+ 
+#判断文件夹是否存在，并且具有可执行权限
+if [[ ! -x "$testFile" ]]; then
+ echo "文件不存在并且没有可执行权限"
+else
+ echo "文件存在并有可执行权限"
+fi
+ 
+#判断文件是否存在
+if [[ ! -f "$testFile" ]]; then
+ echo "文件不存在"
+else
+ echo "文件存在"
+fi
 
 
 ########################### 逻辑判断（与或非） ###############################
