--- a/04-大数据/02-Python/03-字符串操作.md
+++ b/04-大数据/02-Python/03-字符串操作.md
@@ -33,6 +33,11 @@ print(str)
 
 #最终输出：
 hello tom welcome here
+
+
+'{t1}.{key} = {t2}.{key}'.format(t1="aaaa", t2="bbbb", key="key")
+# 输出
+'aaaa.key = bbbb.key'
 ```
 
 ## 2 字符串截取
