--- a/04-大数据/01-Linux/03-Shell/02-遍历.md
+++ b/04-大数据/01-Linux/03-Shell/02-遍历.md
@@ -8,7 +8,7 @@ array=( A B C D 1 2 3 4)
 
 ### 1.1 标准for
 
-```shell
+```
 for(( i=0;i<${#array[@]};i++)) do
 #${#array[@]}获取数组长度用于循环
 echo ${array[i]};
@@ -17,12 +17,12 @@ done;
 
 ### 1.2 for … in
 
-```shell
+```
 #遍历（不带数组下标）：
 for element in ${array[@]}
 #也可以写成for element in ${array[*]}
 do
-	echo $element
+echo $element
 done
 
 # 遍历（带数组下标）：
@@ -32,9 +32,9 @@ do
 done 
 ```
 
-### 1.3 While循环法
+1.3 While循环法
 
-```shell
+```
 i=0  
 while [ $i -lt ${#array[@]} ]  
 #当变量（下标）小于数组长度时进入循环体
@@ -43,25 +43,5 @@ do
     #按下标打印数组元素
     let i++  
 done 
-```
-
-## 2 遍历指定的序列
-
-### 2.1 for...in xxx
-
-```shell
-for hour in 00 01 02 03 04 05 06 07 08 09 10 11 12 13 14 15 16 17 18 19 20 21 22 23
-do
-	echo "hour is ${hour}"
-done
-```
-
-### 2.2 for...in `seq`
-
-```shell
-for index in `seq 0 23`
-do
-	echo "$index"
-done
 ```
 
